fix bug on firefox for max-height picture

--- a/wp-content/themes/scratch/less/front/desktop.less
+++ b/wp-content/themes/scratch/less/front/desktop.less
@@ -28,8 +28,6 @@ only screen and (min-width: 500px) and (min-device-width: 768px)
 
 	.maincontent {
 		.divise(1,1, 200px, none, left);
-		padding-bottom: @unit;
-		width: 100%;
 		height: 100%;
 	}
 
@@ -50,7 +48,7 @@ only screen and (min-width: 500px) and (min-device-width: 768px)
 		max-width: 250px;
 		height: 100%;
 		overflow-y: auto;
-		border-bottom: @unit solid @bgcolor;
+		//border-bottom: @unit solid @bgcolor;
 	}
 
 	#mainbb, #main_nav {
@@ -130,8 +128,9 @@ position: relative;
 	#timeline {
 		width: 0%;
 		float:left;
+		margin-top : @unit;
 		position: absolute;
-		bottom: @unit/3;
+		bottom:0;
 	}
 
 	#wraplist .segment:hover .sortitem {
