--- a/wp-content/themes/scratch/style.less
+++ b/wp-content/themes/scratch/style.less
@@ -70,6 +70,10 @@ p {
 figcaption {
 	font-size:(11/@font-size)*1em;	
 	color: @black60;
+	float: left;
+
+	width: 100%;
+	text-align:center;
 }
 
 .actif {
@@ -141,7 +145,7 @@ nav a {
 	overflow-y: auto;
 	overflow-x: hidden;
 	position: relative;
-	margin-bottom: 44px;
+	margin-bottom: 54px;
 }
 
 #tools {
@@ -156,20 +160,25 @@ nav a {
 	color: @black10;
 }
 
-a.btn-picture {
-	display: block;
-	height: 100%;
+.btn-picture {
+	background-color: @black05;
+	display: inline-block;
+	float: left;
+	width: 100%;
 }
 
 figure#picture {
-	background-color: @black05;
+	position: relative;
+	height: 100%;
+	width: 100;
 }
 
 
-.maincontent img {
+figure#picture img {
 	max-width: 100%;
 	max-height: 100%;
 	min-height: inherit;
+	height: auto;
 }
 
 .wrapthumb {
